Fix ingress config and log viewer log line wrap

--- a/modules/web/src/_theming.scss
+++ b/modules/web/src/_theming.scss
@@ -337,6 +337,12 @@
         background-color: map.get($colors, log-viewer-scrollbar);
       }
 
+      .kd-logs-element, .kd-logs-element-compact {
+        &:hover {
+          background: lighten(map.get($colors, log-viewer-bg), 20%);
+        }
+      }
+
       &.kd-logs-text-color-invert {
         filter: invert(100%);
       }
